--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-
+<meta name="keywords" content="data flow programming, data flow library, data flow, c++ stream processing, RaftLight,Raft,C++,stream,stream processing, streaming computation, StreaMIT,Auto-Pipe,ScalaPipe,AutoPipe,Parallel,Safe"/>
+    <meta name="description" content="Simple, easy to use stream computation library for C++"/>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
@@ -17,12 +18,18 @@
       <div class="container">
         <h1>Raft Light</h1>
         <h2>Simple, easy to use stream computation library for C++.</h2>
-
+        <center>
         <section id="downloads">
           <a href="https://github.com/jonathan-beard/RaftLight/zipball/master" class="btn">Download as .zip</a>
           <a href="https://github.com/jonathan-beard/RaftLight/tarball/master" class="btn">Download as .tar.gz</a>
           <a href="https://github.com/jonathan-beard/RaftLight" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
         </section>
+        <section id="downloads">
+          <a href="#what" class="btn">Intro</a>
+          <a href="#setup" class="btn">Setup</a>
+          <a href="#tutorial" class="btn">Tutorial</a>
+        </section>
+        </center>
       </div>
     </header>
 
