Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@ using the library the only header file needed is the <em>raft</em> header.  Once
 is build you're basically set save for a few details, which will be laid out within the tutorial
  as we go through the example we're about to build.</p>
 
-<p>To build the example application simply:</p>
+<p>To build an example application simply (there are multiple to choose from):</p>
 
-<pre><code>$ cd RaftLib/exampleapps
+<pre><code>$ cd RaftLib/examples/xxx
 $ make
 </code></pre>
 
