Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -32,13 +32,18 @@
 <a id="welcome-to-the-raft-c-template-library" class="anchor" href="#welcome-to-the-raft-c-template-library" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to the Raft C++ template library</h3>
 
 <h3>
-<a id="current-status" class="anchor" href="#current-status" aria-hidden="true"><span class="octicon octicon-link"></span></a>Current Status</h3>
+<a id="project-status" class="anchor" href="#project-status" aria-hidden="true"><span class="octicon octicon-link"></span></a>Project Status</h3>
 
 <p>The Raft library is currently an alpha release.  The API itself is relatively stable, however the back end
 is subject to updates.  The release is subject to the Apache Version 2.0 license. If you are checking
 out the code to develop, please use the main line and create pull request. If you want to 
 develop applications, I suggest using one of the release branches so that you have a stable
 development experience. You can add applications to the main line through subsequent pull requests.</p>
+
+<h3>
+<a id="build-status" class="anchor" href="#build-status" aria-hidden="true"><span class="octicon octicon-link"></span></a>Build Status</h3>
+
+<p><a href="https://travis-ci.org/jonathan-beard/RaftLib"><img src="https://travis-ci.org/jonathan-beard/RaftLib.svg?branch=master" alt="Build Status"></a></p>
 
 <h3>
 <a id="setup" class="anchor" href="#setup" aria-hidden="true"><span class="octicon octicon-link"></span></a>Setup</h3>
@@ -64,6 +69,16 @@ they should be in the examples folder within the build directory.</p>
 
 <pre><code>$ cd build/examples
 </code></pre>
+
+<h2>
+<a id="how-to-build-apps-and-use-raftlib" class="anchor" href="#how-to-build-apps-and-use-raftlib" aria-hidden="true"><span class="octicon octicon-link"></span></a>How to build apps and use RaftLib</h2>
+
+<ul>
+<li><a href="https://github.com/jonathan-beard/RaftLib/wiki">Project Wiki</a></li>
+<li><a href="https://github.com/jonathan-beard/RaftLib/blob/master/README.md">Project README</a></li>
+<li><a href="https://goo.gl/4VDlbr">Blog post intro</a></li>
+<li><a href="http://goo.gl/obkWUh">Jonathan Beard's thesis</a></li>
+</ul>
 
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
