Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -90,6 +90,13 @@ $ sudo make install
 </ul>
 
 <h3>
+<a id="documentation" class="anchor" href="#documentation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Documentation</h3>
+
+<p>The main source of documentation is available on the <a href="https://github.com/jonathan-beard/RaftLib/wiki">RaftLib wiki page</a></p>
+
+<p>If you see errors, or want to contribute please feel free to do so. </p>
+
+<h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
 <p>In 2013 Jonathan Beard (<a href="https://github.com/jonathan-beard" class="user-mention">@jonathan-beard</a>) started work on the Raft language.  In the interim,
@@ -99,16 +106,27 @@ the result. Since then many have contributed to the theory and code base behind 
 notable is my co-author (<a href="https://github.com/pl53" class="user-mention">@pl53</a>), for a full current contribution list see the GitHub stats page. </p>
 
 <h3>
+<a id="citing-the-raft-library" class="anchor" href="#citing-the-raft-library" aria-hidden="true"><span class="octicon octicon-link"></span></a>Citing the Raft Library</h3>
+
+<p>Please cite as:</p>
+
+<pre lang="bibtex"><code>@inproceedings{blc15,
+  author = {Beard, Jonathan C. and Li, Peng and Chamberlain, Roger D.},
+  title = {RaftLib: A {C++} Template Library for High Performance Stream Parallel Processing},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  year = {2015},
+  month = feb,
+  series = {PMAM 2015},
+  booktitle = {Proceedings of Programming Models and Applications on Multicores and Manycores},
+  pages = {96-105},
+}
+</code></pre>
+
+<h3>
 <a id="genealogy" class="anchor" href="#genealogy" aria-hidden="true"><span class="octicon octicon-link"></span></a>Genealogy</h3>
 
 <p>There have been several dozen streaming languages.  Most notable of which is probably StreaMIT.  I've worked on the Auto-Pipe streaming runtime system (both versions 1 and 2) developed at Washington University.  This particular streaming library was developed as a faster way to get started with stream processing by enabling users to stick to a language with which they are already familiar (C++).</p>
-
-<h3>
-<a id="documentation" class="anchor" href="#documentation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Documentation</h3>
-
-<p>The main source of documentation is available on the <a href="https://github.com/jonathan-beard/RaftLib/wiki">RaftLib wiki page</a></p>
-
-<p>If you see errors, or want to contribute please feel free to do so. </p>
 
 <h3>
 <a id="issues" class="anchor" href="#issues" aria-hidden="true"><span class="octicon octicon-link"></span></a>Issues</h3>
