Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ notable is my co-author (<a href="https://github.com/pl53" class="user-mention">
   month = feb,
   series = {PMAM 2015},
   booktitle = {Proceedings of Programming Models and Applications on Multicores and Manycores},
-  pages = {96-105},
+  pages = {96-105}
 }
 </code></pre>
 
