Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ $ sudo make install
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
-<p>In 2013 Jonathan Beard (<a href="https://github.com/jonathan-beard" class="user-mention">@jonathan-beard</a>) started work on the Raft language.  In the interim,
+<p>In 2013 Jonathan Beard (<a href="https://github.com/jonathan-beard" class="user-mention">@jonathan-beard</a>, also <a href="https://twitter.com/jonathan_beard">Follow @jonathan_beard</a>  ) started work on the Raft language.  In the interim,
 and realizing the ubiquity of the C++ language, he started work on a template library that 
 uses the same framework as the full Raft language and run-time system.  This C++ library is 
 the result. Since then many have contributed to the theory and code base behind RaftLib (most
