updates to index.html

--- a/index.html
+++ b/index.html
@@ -132,6 +132,31 @@ notable is my co-author (<a href="https://github.com/pl53" class="user-mention">
 <a id="issues" class="anchor" href="#issues" aria-hidden="true"><span class="octicon octicon-link"></span></a>Issues</h3>
 
 <p>Issues can be opened by filing a report on our <a href="https://github.com/jonathan-beard/RaftLib/issues">issues page</a></p>
+      
+<div id="disqus_thread"></div>
+<script>
+/**
+* RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+* LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables
+*/
+
+var disqus_config = function () {
+this.page.url = 'http://raftlib.io/'; // Replace PAGE_URL with your page's canonical URL variable
+this.page.identifier = 'raft_proj_main'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+};
+
+(function() { // DON'T EDIT BELOW THIS LINE
+var d = document, s = d.createElement('script');
+
+s.src = '//raftlibprojecthome.disqus.com/embed.js';
+
+s.setAttribute('data-timestamp', +new Date());
+(d.head || d.body).appendChild(s);
+})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
+
+      
       </section>
     </div>
 
@@ -145,6 +170,9 @@ notable is my co-author (<a href="https://github.com/pl53" class="user-mention">
             pageTracker._trackPageview();
             } catch(err) {}
           </script>
+
+<script id="dsq-count-scr" src="//raftlibprojecthome.disqus.com/count.js" async></script>
+
 
   </body>
 </html>
