added comments tag

--- a/index.html
+++ b/index.html
@@ -132,7 +132,11 @@ notable is my co-author (<a href="https://github.com/pl53" class="user-mention">
 <a id="issues" class="anchor" href="#issues" aria-hidden="true"><span class="octicon octicon-link"></span></a>Issues</h3>
 
 <p>Issues can be opened by filing a report on our <a href="https://github.com/jonathan-beard/RaftLib/issues">issues page</a></p>
-      
+
+<h3>
+<a id="comments" class="anchor" href="#comments" aria-hidden="true"><span class="octicon octicon-link"></span></a>Comments</h3>
+
+
 <div id="disqus_thread"></div>
 <script>
 /**
