--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@ $ sudo make install
 
 <ul>
 <li><a href="https://github.com/jonathan-beard/RaftLib/wiki">Project Wiki</a></li>
+<li><a href="https://medium.com/cat-dev-urandom/simplifying-parallel-applications-for-c-an-example-parallel-bzip2-using-raftlib-with-performance-f69cc8f7f962">Parallel Bzip2 Example</a></li>
 <li><a href="https://github.com/jonathan-beard/RaftLib/blob/master/README.md">Project README</a></li>
 <li><a href="https://goo.gl/4VDlbr">Blog post intro</a></li>
 <li><a href="http://goo.gl/obkWUh">Jonathan Beard's thesis</a></li>
-<li><a href="https://medium.com/cat-dev-urandom/simplifying-parallel-applications-for-c-an-example-parallel-bzip2-using-raftlib-with-performance-f69cc8f7f962">Parallel Bzip2 Example</a></li>
 </ul>
 
 <h3>
@@ -126,7 +126,7 @@ notable is my co-author (<a href="https://github.com/pl53" class="user-mention">
 <h3>
 <a id="genealogy" class="anchor" href="#genealogy" aria-hidden="true"><span class="octicon octicon-link"></span></a>Genealogy</h3>
 
-<p>There have been several dozen streaming languages.  Most notable of which is probably StreaMIT.  I've worked on the Auto-Pipe streaming runtime system (both versions 1 and 2) developed at Washington University.  This particular streaming library was developed as a faster way to get started with stream processing by enabling users to stick to a language with which they are already familiar (C++).</p>
+<p>There have been several dozen streaming languages.  Most notable of which is probably StreaMIT.  I've worked on the Auto-Pipe streaming runtime system (both versions 1 and 2) developed at Washington University in St. Louis.  This particular streaming library was developed as a faster way to get started with stream processing by enabling users to stick to a language with which they are already familiar (C++).</p>
 
 <h3>
 <a id="issues" class="anchor" href="#issues" aria-hidden="true"><span class="octicon octicon-link"></span></a>Issues</h3>
