--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
           <a href="https://github.com/jonathan-beard/RaftLib/zipball/master" class="btn">Download as .zip</a>
           <a href="https://github.com/jonathan-beard/RaftLib/tarball/master" class="btn">Download as .tar.gz</a>
           <a href="https://github.com/jonathan-beard/RaftLib" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+        </section>
+      </div>
+      <div class="container">
+        <section id="social">
           <iframe src="https://ghbtns.com/github-btn.html?user=jonathan-beard&repo=RaftLib&type=star&count=true&size=large" frameborder="0" scrolling="0" allowtransparency="true"  width="160px" height="30px"></iframe>
+          <iframe src="https://ghbtns.com/github-btn.html?user=twbs&repo=RaftLib&type=fork&count=true&size=large" frameborder="0" scrolling="0" width="158px" allowtransparency="true" height="30px"></iframe>
         </section>
       </div>
     </header>
