--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
       </div>
       <div class="container">
         <section id="social">
+        <center>
           <iframe src="https://ghbtns.com/github-btn.html?user=jonathan-beard&repo=RaftLib&type=star&count=true&size=large" frameborder="0" scrolling="0" allowtransparency="true"  width="160px" height="30px"></iframe>
-          <iframe src="https://ghbtns.com/github-btn.html?user=twbs&repo=RaftLib&type=fork&count=true&size=large" frameborder="0" scrolling="0" width="158px" allowtransparency="true" height="30px"></iframe>
+          <iframe src="https://ghbtns.com/github-btn.html?user=jonathan-beard&repo=RaftLib&type=fork&count=true&size=large" frameborder="0" scrolling="0" width="158px" allowtransparency="true" height="30px"></iframe>
+          </center>
         </section>
       </div>
     </header>
